commiting changes before switching to Git branch: design-docs/sql-tables
